--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,77 @@
-.App {
-  text-align: center;
+/* header {
+    display: flex;
+} */
+
+.nav{
+    display: flex;
+    width: 100%;
+    /* background:linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('/first-project/src/Images/header.jpg'); */
+    
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    height: 400px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.nav-links{
+    margin-top: 22px;
+    height: 60px;
+    display: flex;
+    width: 100%;
+    justify-content: flex-end;
+    background:rgba(0, 0, 0, 0.7)
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.nav-links ul{
+    margin-top: 20px;
+    margin-right: 50px;
+    
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.nav-links ul li{
+    display: inline;
+    padding: 10px;
+    color: #fff;
 }
 
-.App-link {
-  color: #61dafb;
+.logo img{
+    height: 100px;
+    width: 200px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navItems{
+    text-align: center;
+    position: absolute;
+    top: -240px;
+    left:450px;
+    font-size: 25px;
+    color: #fff;
+    
+}
+
+.outerNav{
+    position: relative;
+}
+
+.bannerHead{
+
+    text-align: center;
+    padding: 30px;
+}
+.bannerCard{
+    display: flex;
+    justify-content: space-evenly;
+}
+.cardImg img{
+    height: 300px;
+    width: 300px;
+}
+.cardInfo{
+    text-align: center;
+}
+
+.btn{
+    padding: 10px 40px;
+    border-radius: 12px;
+    background-color: bisque;
+    border: none;
 }
